--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-avatar-edit": "^1.0.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-hot-toast": "^1.0.2",
